# MedicalRecordWallet

./: CMakeLists.txt  README.md  presentation.txt  project_description.txt
src/: CryptoService.cpp  CryptoService.h  LoginDialog.cpp  LoginDialog.h  main.cpp
